examples/test/testpolicy11500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11500
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key4: value47
      key13: value33
      key3: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value30
          key38: value49
          key9: value23
      podSelector:
        matchLabels:
          key34: value43
